kustomize/overlays/scots-lab/apps/photoprism/photoprism-oidc-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism-photoprism-plus
  namespace: photoprism
spec:
  template:
    spec:
      containers:
        - name: photoprism-plus
